example spek test in order to trigger travis